<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EdadBiologicaUnica</string>
    <string name="hello_world">Hello world!</string>
    <string name="test">! Test valido para personas menores de 80 años !</string><string name="menu_settings">Settings</string>
    <string name="edad">Ingrese su edad</string><string name="edadInv">Edad Invalida</string><string name="conti">CONTINUAR</string><string name="sex">¿Sexo?</string><string name="mascu">Masculino</string><string name="fem">Femenino</string><string name="title_activity_test">Test</string>
    
    
    
    
    
    
    
    

</resources>