<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="90dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <TextView
        android:id="@+id/tvDisplay0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/test"
        android:textSize="15dp">
    </TextView>
    
    <EditText
        android:id="@+id/etComando"
		android:layout_marginTop="50dp"
        android:layout_width="fill_parent"
        android:textSize="12dp"
        android:layout_height="wrap_content"
        android:hint="@string/edad"
        android:password="true" />
    <TextView
        android:id="@+id/tvInvalido"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/edadInv"
        android:textColor="@android:color/white" >
    </TextView>

    <Button
        android:id="@+id/bEdad"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/conti" 
        android:onClick="checkAge" 
        >
        

    </Button>
    
</LinearLayout>