<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="80dp">
  
<TextView
        android:id="@+id/tvDisplaySex"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:text="@string/sex"
        tools:context=".Test_Edad_Biologica"
        android:textSize="20dp"
         />
    
    <Button
        android:id="@+id/bMasc"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvDisplaySex"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        android:onClick="increaseBioAge"
        android:text="@string/mascu"
        android:textSize="20dp" />

    <Button
        android:id="@+id/bFem"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bMasc"
        android:layout_alignLeft="@+id/bMasc"
        android:layout_marginBottom="40dp"
        android:onClick="decreaseBioAge"
        android:text="@string/fem"
        android:textSize="20dp" />

</RelativeLayout>